# python-async-llm-pipelines

./: README.md  pyproject.toml
.github/workflows/: ci.yml
MEMORY/: core_decisions_ai.md  core_decisions_human.md  full_history_ai.md  full_history_human.md
async_pipelines/: __init__.py  benchmark.py  core.py  io_utils.py  tool_dispatch.py
docs/: architecture.md  backpressure.json  backpressure.md  benchmarks.json  benchmarks.md
scripts/: bench_1000_doc.py  bench_backpressure.py  capture_demo.sh
tests/: test_architecture_doc.py  test_bench_backpressure.py  test_bench_table_snapshot.py  test_benchmark.py  test_benchmark_dump.py  test_capture_demo_smoke.py  test_docstring_timeout_api.py  test_io_utils_atomic_write.py  test_process.py  test_public_surface.py  test_readme_banned_phrases.py  test_readme_decision_range.py  test_readme_kwarg_consistency.py  test_readme_snapshot.py  test_stream.py  test_timeouts.py  test_tool_dispatch.py  test_workflows_concurrency.py  test_workflows_timeout_minutes.py  test_workflows_yaml_parseable.py
