[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "python-async-llm-pipelines"
version = "0.0.1"
description = "Performance patterns for concurrent LLM workloads: async batching with bounded concurrency, concurrent tool-call dispatch, backpressure, structured concurrency."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "JT McHorse", email = "jmchorse.tech@gmail.com" }]
keywords = ["llm", "asyncio", "concurrency", "performance"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Framework :: AsyncIO",
]

# Zero required runtime deps — the wrapper uses stdlib asyncio only.
# Anthropic / OpenAI SDKs and httpx are not required to use this package.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  # Powers tests/test_workflows_yaml_parseable.py (#48), the inverse
  # safety net for the 21-day silent CI outage closed in portfolio-ops#27.
  "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/jt-mchorse/python-async-llm-pipelines"
Issues    = "https://github.com/jt-mchorse/python-async-llm-pipelines/issues"

[tool.hatch.build.targets.wheel]
packages = ["async_pipelines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]
ignore = ["E501"]
